recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:11: error: not found: value step
    setCouleur(current(step))
                       ^